[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "sphinx-disqus"
version = "1.2.0"
description = "Embed Disqus comments in Sphinx documents/pages."
readme = "README.md"
authors = ["Robpol86 <robpol86@gmail.com>"]
license = "BSD-2-Clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Plugins",
    "Environment :: Win32 (MS Windows)",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.urls]
documentation = "https://sphinx-disqus.readthedocs.io"
repository = "https://github.com/Robpol86/sphinx-disqus"

[tool.poetry.dependencies]
python = "^3.6.2"
# Project dependencies.
sphinx = "*"
# Docs.
sphinx-copybutton = {version = "*", optional = true}
sphinx-notfound-page = {version = "*", optional = true}
sphinx-panels = {version = "*", optional = true}
sphinx-rtd-theme = {version = "*", optional = true}
toml = {version = "*", optional = true}

[tool.poetry.extras]
docs = ["sphinx-notfound-page", "sphinx-panels", "sphinx-rtd-theme", "sphinx-copybutton", "toml"]

[tool.poetry.dev-dependencies]
# Linters.
black = "*"  # not semver
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
flake8-import-order = ">=0.18.1"
pep8-naming = ">=0.12.1"
pylint = ">=2.11.1"
# Tests.
coverage = {version = ">=6.1.2", extras = ["toml"]}
pytest = ">=6.2.5"
pytest-cov = ">=3.0.0"
pytest-icdiff = ">=0.5"
# Project.
sphinx = ">=4.3.0"

[tool.black]
line-length = 125
target-version = ["py36", "py37", "py38", "py39"]

[tool.coverage.report]
exclude_lines = [
    "^\\s*from",
    "^\\s*import",
    "^\\s*raise AssertionError",
    "^\\s*raise NotImplementedError",
]
fail_under = 85

[tool.coverage.run]
branch = true

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [".venv/*", "build/*", "dist/*"]
max-args = 6
max-line-length = 125
reports = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "consider-using-f-string",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pylint.TYPECHECK]
ignored-modules = ["distutils", "py"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --durations=15 --showlocals --verbose --verbose"
filterwarnings = [
    "ignore::DeprecationWarning:sphinx.*:",
]
log_level = "DEBUG"
